# CaptionFlow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
caption_data/: captions.parquet  contributors.parquet  jobs.parquet
examples/: config.yaml  monitor.yaml  orchestrator.yaml  worker.yaml
examples/orchestrator/: huggingface_url_dataset.yaml  huggingface_url_dataset_pexels-1.7M.yaml  local_image_files.yaml  multistage_captioning.yaml  orchestrator.yaml  webdatasets_large.yaml
scripts/: test_central_collection.py
src/caption_flow/: __init__.py  cli.py  models.py  monitor.py  orchestrator.py  storage.py  viewer.py  worker.py  worker_data.py  worker_vllm.py
src/caption_flow/processors/: __init__.py  base.py  huggingface.py  local_filesystem.py  webdataset.py
src/caption_flow/storage/: __init__.py  exporter.py  lance_storage.py  manager.py
src/caption_flow/utils/: __init__.py  auth.py  caption_utils.py  certificates.py  checkpoint_tracker.py  chunk_tracker.py  dataset_loader.py  dataset_metadata_cache.py  image_processor.py  job_queue.py  json_utils.py  prompt_template.py  shard_processor.py  shard_tracker.py  vllm_config.py
src/caption_flow/workers/: base.py  caption.py  data.py
tests/: test_caption_utils.py  test_certificates.py  test_cli.py  test_config_reload.py  test_duplicate_job_assignments.py  test_exporter.py  test_fix_verification.py  test_huggingface_ranges.py  test_json_utils.py  test_main.py  test_monitor.py  test_processors.py  test_range_level_distribution.py  test_storage_components.py  test_viewer.py  test_vllm_config.py  test_webdataset_ranges.py  test_worker_caption.py  test_worker_reconnection_complete.py  test_worker_reconnection_sequence.py  test_workers_data.py
