[project]
name = "caption-flow"
version = "0.4.1"
description = "Self-contained distributed community captioning system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "bghira", email = "bghira@users.github.com"},
]
keywords = ["captioning", "distributed", "vllm", "dataset", "community"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "websockets>=12.0",
    "pyarrow>=14.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "certbot>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "vllm (>=0.10.0,<0.11.0)",
    "webdataset (>=1.0.2,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "boto3 (>=1.40.11,<2.0.0)",
    "torchdata (>=0.11.0,<0.12.0)",
    "textual (>=5.3.0,<6.0.0)",
    "urwid (>=3.0.2,<4.0.0)",
    "webshart (>=0.4.3,<0.5.0)",
    "pylance (>=0.35.0,<0.36.0)",
    "duckdb (>=1.3.2,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
caption-flow = "caption_flow.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"

